# templates

./: .gitignore  flake.nix
android/: flake.nix  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts
android/gradle/: verification-metadata.xml
c/: flake.nix
c/src/: main.c
cpp/: .gitignore  Makefile  flake.nix
haskell/: .gitignore  flake.nix  haskell-app.cabal
haskell/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
java/: .gitignore  build.xml  flake.nix
java/app/: build.gradle.kts
java/gradle/: verification-metadata.xml
javafx/: .project  flake.nix  settings.gradle.kts
javafx/app/: .project  build.gradle.kts
javafx/app/src/main/java/javaProject/: Main.java
javafx/app/src/main/java/main/: Main.java
javafx/gradle/: verification-metadata.xml
matlab/: flake.nix
python/: flake.nix  pyproject.toml
python-flask/: .gitignore  flake.nix  pyproject.toml
python-flask/src/pythonProject/: __init__.py  app.py  views.py
python-flask/src/pythonProject/blueprints/: __init__.py
python-flask/src/pythonProject/templates/: index.html
python-flask/src/pythonProject/tests/: sample_test.py
rust/: .gitignore  Cargo.toml  Makefile  flake.nix
src/: main.java
template/: flake.nix
