# curtsey of https://github.com/nix-community/templates/blob/main/python/pyproject.toml
[build-system]
requires = [
  "setuptools",
  "wheel"
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

# include templates in the package
[tool.setuptools.package-data]
pythonProject = ['templates/*']

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"

[project]
name = "pythonProject"
version = "0.0.0"
authors = [
    # {name = "You", email = "you@you.com"},
]
description = "QR code generator"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "flask",
]

[project.optional-dependencies]
testing = [
  "pytest",
  "ruff",
]
dev = [
  "python-lsp-server",
  "pythonProject[testing]",
]


[project.scripts]
pythonProject = "pythonProject.app:main"
