# curtsey of https://github.com/nix-community/templates/blob/main/python/pyproject.toml
[build-system]
requires = [
  "setuptools",
  "wheel"
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

# Include static files if necessary
# [tool.setuptools.package-data]
# pythonProject= ['static/*']

# use the newer importlib import mode for pytest, which resolves dependency issues
#  (not being able to find yourself)
[tool.pytest.ini_options]
addopts = "--import-mode=importlib"

[project]
name = "pythonProject"
version = "0.0.0"
authors = [
    # {name = "You", email = "you@you.com"},
]
description = "idk"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[project.optional-dependencies]
testing = [
  "pytest",
  "ruff"
]
dev = [
  "python-lsp-server",
  "pythonProject[testing]"
]

[project.scripts]
# entrypoint in a python file - here it is the pythonProject module, in app.py, in main
# this gives the python package an executable 'binary'
pythonProject = "pythonProject.app:main"
